# opencraft-dev

./: .gitignore  README.md  drizzle.config.ts  next.config.ts  package.json  pnpm-lock.yaml
agent-service/: .bedrock_agentcore.yaml  .dockerignore  .gitignore  DEPLOY.md  Dockerfile  bedrock-policy.json  cli.py  pyproject.toml
agent-service/.bedrock_agentcore/opencraft_agent/: Dockerfile
agent-service/src/agent_service/: agentcore_entrypoint.py  app.py  config.py  extract_design.py  models.py
agent-service/src/agent_service/context/: assembler.py  file_meta.py  history.py  repo_map.py
agent-service/src/agent_service/prompt/: blocks.py  system_prompt.py
agent-service/src/agent_service/runner/: durable.py  finish.py  gate.py  harness.py  stream.py
agent-service/src/agent_service/tools/: __init__.py  files.py  mcp_connections.py  sandbox.py  scrape.py  search.py  terminal.py  visual.py
agent-service/tests/: test_context.py
app/: globals.css  layout.tsx  page.tsx
app/(auth)/: layout.tsx
app/dashboard/: page.tsx
app/pricing/: page.tsx
components/: PendoInitializer.tsx
components/canvas/: AISidebar.tsx  BoundingBox.tsx  CanvasActions.tsx  CanvasDocBridge.tsx  CanvasMenu.tsx  CopyToFigmaButton.tsx  CreditBar.tsx  DeleteScreenModal.tsx  EditModePanel.tsx  ElementPropertiesPanel.tsx  GenerateButton.tsx  ImageMenu.tsx  LayersSidebar.tsx  LiveReasoningPanel.tsx  MentionInput.tsx  PresenceAvatars.tsx  PresenceCursors.tsx  ReasoningPanel.tsx  RemixFromWebModal.tsx  (+10 more)
contexts/: CanvasContext.tsx  CollabContext.tsx
convex/: http.ts  messages.ts  reasoning.ts  schema.ts  screens.ts  users.ts
docs/: agent-context-architecture.md
drizzle/: 0000_charming_vulcan.sql  0001_concerned_lilandra.sql  0003_stale_cardiac.sql  0004_harsh_shockwave.sql
hooks/: use-autosave.ts  use-canvas-doc-sync.ts  use-chat-streaming.ts  use-code-explorer.ts  use-edit-mode.ts  use-figma-export.ts  use-infinite-canvas.ts  use-join-invite.ts  use-reasoning-stream.ts  use-sandbox-resume.ts
infra/: .gitignore  README.md  cdk.json  package-lock.json  package.json  tsconfig.json
inngest/: functions.ts  realtime.ts  utils.ts
lib/: agent-service.ts  ai-models.ts  extension-content.ts  gradient-utils.ts  project-utils.ts  s3.ts  sandbox-url.ts  streaming-utils.ts
scripts/: fetch-theme-tokens.mjs
types/: canvas.ts  project.ts
(+163 files in other folders)
